# SmirnovFastMatMul

./: CMakeLists.txt  main.cpp  makefile  run_script
algorithm/: MultiplyMatrices.cpp  MultiplyMatrices.h  SmirnovAlgorithm.cpp  SmirnovAlgorithm.h  SmirnovAlgorithm_336.cpp  SmirnovAlgorithm_336.h  SmirnovAlgorithm_336.tpp  SmirnovAlgorithm_363.cpp  SmirnovAlgorithm_363.h  SmirnovAlgorithm_363.tpp  SmirnovAlgorithm_633.cpp  SmirnovAlgorithm_633.h  SmirnovAlgorithm_633.tpp  dgemm_utils.cpp  dgemm_utils.h
algorithmTesting/: AlgTestA.h  AlgorithmEntrance.h  SmirnovAlgorithmTempalte.h
algorithm_backup/: MultiplyMatrices.cpp_  MultiplyMatrices.h  SmirnovAlgorithm.cpp  SmirnovAlgorithm.h  SmirnovAlgorithm_336.cpp  SmirnovAlgorithm_336.h  SmirnovAlgorithm_363.cpp  SmirnovAlgorithm_363.h  SmirnovAlgorithm_633.cpp  SmirnovAlgorithm_633.h
common/: common.h
communication/: CommunicationHandler.cpp  CommunicationHandler.h  Distribution.cpp  Distribution.h  MpiArray.cpp  MpiCommunication.cpp  MpiCommunication.h
distribution/: Distribution.cpp  Distribution.h
matrix/: CondensedMatrix.cpp  CondensedMatrix.h  Matrix.cpp  Matrix.h  PositionalMatrix.cpp  PositionalMatrix.h
measurement/: Measurements.cpp  Measurements.h
pdgemm/: pdgemm_alg.cpp  pdgemm_alg.h
smirnov_gen/: c++_generation.py  generate_params.py  generate_test.py  generators_utils.py  mat_mul.py  parametes_generator.py  smirnov_a_336.txt  smirnov_a_363.txt  smirnov_a_633.txt  smirnov_b_336.txt  smirnov_b_363.txt  smirnov_c_336.txt  smirnov_c_363.txt  smirnov_c_633.txt  test_cases_generation.py
smirnov_gen/bench/: 5400_10800_2160_8_5_5.in  86400_86400_86400_5_64_8.in  rhea_scalapack_5400_10800_2160_10_16_4.pbs  rhea_scalapack_5400_10800_2160_10_4_4.pbs  rhea_scalapack_5400_10800_2160_20_8_2.pbs  rhea_scalapack_5400_10800_2160_2_20_20.pbs  rhea_scalapack_5400_10800_2160_4_10_10.pbs  rhea_scalapack_5400_10800_2160_5_8_8.pbs  rhea_scalapack_5400_10800_2160_8_25_5.pbs  rhea_scalapack_5400_10800_2160_8_5_5.pbs  rhea_scalapack_86400_86400_86400_10_16_4.pbs  rhea_scalapack_86400_86400_86400_1_1600_40.pbs  rhea_scalapack_86400_86400_86400_1_40_40.pbs  rhea_scalapack_86400_86400_86400_2_20_20.pbs  rhea_scalapack_86400_86400_86400_2_400_20.pbs  rhea_scalapack_86400_86400_86400_4_100_10.pbs  rhea_scalapack_86400_86400_86400_4_10_10.pbs  rhea_scalapack_86400_86400_86400_5_64_8.pbs  rhea_scalapack_86400_86400_86400_5_8_8.pbs  rhea_scalapack_86400_86400_86400_8_25_5.pbs  (+54 more)
testing/: main.cpp  test_alg_entrance.cpp  test_bfs.cpp  test_condensed.cpp  test_dfs.cpp  test_dfs.h  test_dgemm_gnu.cpp  test_dgemm_omp.cpp  test_dist_smir.cpp  test_distribution.cpp  test_mes.cpp  test_move_ctor.cpp  test_move_ctor.h  test_multiplication.cpp  test_multiplication.h  test_multiplication_363.cpp  test_pos_matrix.cpp  test_smirnov_distribution.cpp  test_template.cpp
(+90 files in other folders)
